test/classes/errors/nilability-init-var/init-var-oknil-unmanaged-from-oknil-shared.good
init-var-oknil-unmanaged-from-oknil-shared.chpl:9: error: cannot assign to unmanaged MyClass? from shared MyClass?
